--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -219,3 +219,64 @@
   }
 }
 //--------------------------------
+//---------- Footer -------------
+
+.footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 54px 0px;
+  gap: 25px;
+  color: $white-normal;
+}
+
+.footer-icons{
+  display: flex;
+  gap: 10px;
+  color: $white-normal;
+}
+//-----------------------------
+//------ Whatsapp button -------
+
+.whatsapp-button{
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 3;
+  
+  img{
+    max-width: 70px;
+    transition: transform 0.5s;
+  }
+
+  img:hover{
+    transform: scale(1.1);
+  }
+}
+
+.whatsapp-button .tooltip-text{
+  visibility: hidden;
+  position: absolute;
+  width: 120px;
+  top: 8px;
+  left: -145px;
+  padding: 6px;
+  border-radius: 8px;
+  text-align: center;
+  background-color: $secondary-normal;
+  color: $white-normal;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.whatsapp-button:hover .tooltip-text{
+  visibility: visible;
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .whatsapp-button{
+    max-width: 64px;
+  }
+}
